modules/deployments/ollama/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ollama-stripprefix
  namespace: ${namespace}
spec:
  stripPrefix:
    prefixes:
      - /ollama
