modules/deployments/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ${namespace}
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - name: http
      port: 80
      targetPort: 11434
