modules/deployments/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ${namespace}
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ${namespace}-ollama-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /ollama
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 80
